--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-router-dom": "^6.21.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.3",
     "video-react": "^0.16.0"
